--- a/week-1-html-css-js/day-3/index.html
+++ b/week-1-html-css-js/day-3/index.html
@@ -20,9 +20,9 @@
 
     </div>
 
-    <!-- <div class="shadowbox">
+    <div class="shadowbox">
         <p>hello dev</p>
-    </div> -->
+    </div>
 
     <div>
 
